--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,11 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "overrides": {
+    "nth-check": "^2.0.1",
+    "webpack-dev-server": "^5.2.1",
+    "postcss": "^8.4.31"
+  },
   "eslintConfig": {
     "extends": [
       "react-app"
