--- a/client/package.json
+++ b/client/package.json
@@ -6,18 +6,22 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "postcss-selector-parser": "^6.0.13"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "audit-fix": "npm audit fix --force",
+    "audit-check": "npm audit"
   },
   "overrides": {
     "nth-check": "^2.0.1",
     "webpack-dev-server": "^5.2.1",
-    "postcss": "^8.4.31"
+    "postcss": "^8.4.31",
+    "postcss-selector-parser": "^6.0.13"
   },
   "eslintConfig": {
     "extends": [
